--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -101,7 +101,10 @@
                    return false;
                }
           });
-          ChartBar();
+           ChartBar();
+           ExportPdf();
+             
+          
     });
 
 </script>
