--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -2,7 +2,7 @@
 @*@Styles.Render("~/Octagon/assets/css/cosmo.css")*@
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+    
 }
 <div class="container" style="padding-bottom: 20px">
     <div class="row">
@@ -151,7 +151,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/search")
-    @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+    @*@Scripts.Render("~/Scripts/jquery-1.10.2.js")
 
     <script>
 
@@ -160,9 +160,12 @@
         jQuery_1_10_2(function () {
             $("#terminals").DataTable();
         });
-    </script>
+    </script>*@
 
     <script>
+        $(function () {
+            $("#terminals").DataTable();
+        })
         $(document).on("click", ".WorkingHoursEdit2", function () {
             var id = $(this).data('id');
             $("#DeleteTerminalModal #id").val(id);
