--- a/OctagonPlatform/Views/Users/Sections/Terminals.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/Terminals.cshtml
@@ -1,1 +1,76 @@
-﻿<h3>Terminals</h3>
+﻿
+@model IEnumerable<OctagonPlatform.Models.Terminal>
+
+<p class="alert alert-info">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+    <thead>
+        <tr>
+            <th>Terminal ID</th>
+            <th>Partner</th>
+            <th>Address</th>
+            <th>Zip</th>
+            <th>Phone</th>
+            <th>Status</th>
+            <th>Cash Balance</th>
+        </tr>
+    </thead>
+
+    <tbody id="listOfTerminals">
+
+        @foreach (var item in Model)
+        {
+            if (!item.Deleted)
+            {
+                <tr class="info">
+                    <td>@item.TerminalId</td>
+                    <td>@item.Partner.BusinessName</td>
+                    <td>@item.Address1</td>
+                    <td>@item.Zip</td>
+                    <td>@item.Phone</td>
+                    <td>@item.Status</td>
+                    <td>@item.Balance</td>
+
+                    <td>
+                        <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                linkText: "Edit",
+                                                                actionName: "Edit",
+                                                                controllerName: "Terminals",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )
+                    </td>
+                    <td>
+                        <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                 linkText: "Delete",
+                                                                 actionName: "Delete",
+                                                                 controllerName: "Terminals",
+                                                                 routeValues: new
+                                                                 {
+                                                                     id = item.Id
+                                                                 },
+                                                                 htmlAttributes: null
+                                                                 )
+                    </td>
+                    <td>
+                        <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                    linkText: "Details",
+                                                                    actionName: "Details",
+                                                                    controllerName: "Terminals",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = item.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )
+                    </td>
+                </tr>
+            }
+        }
+    </tbody>
+
+</table>
