--- a/OctagonPlatform/Views/Users/Details.cshtml
+++ b/OctagonPlatform/Views/Users/Details.cshtml
@@ -56,19 +56,13 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse1">Terminal</a>
+                        <a data-toggle="collapse" href="#collapse1">Partner's Terminals</a>
                     </h4>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
-
-                        @Ajax.ActionLink("Refresh", "", "Users",
-                   new { toAttach = false, userId = Model.Id.ToString() },
-                   new AjaxOptions { UpdateTargetId = "terminalsUser", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" },
-                   htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#terminalsUser" })
-
                         <div id="terminalsUser">
-                            @Html.Partial("Sections/Terminals", Model.Terminals)
+                            @Html.Partial("Sections/TerminalsPartner", Model) @*mando el modelo user porque necesito los datos de las terminales del PARTNER.*@
                         </div>
                     </div>
                 </div>
@@ -76,11 +70,7 @@
         </div>
     </div>
 
-    @*@Html.Partial("Sections/Terminals", Model.VaultCash, new ViewDataDictionary() { { "terminalId", Model.Id } })*@
-
-
     <div class="panel-group  col-md-6">
-
         <div class="panel-group">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -91,7 +81,7 @@
                 <div id="terminalAssigned" class="panel-collapse collapse">
                     <div class="panel-body">
                         <div id="terminalsUserAssigned">
-                            @Html.Partial("Sections/Terminals", Model.Terminals)
+                            @Html.Partial("Sections/TerminalsUser", Model.Terminals, new ViewDataDictionary() { { "userId", Model.Id } })
                         </div>
                     </div>
                 </div>
