--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -26,12 +26,12 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                                     @Html.HiddenFor(m => m.TriesToLogin)
                                     @Html.ValidationSummary(true, "", new {@class = "text-warning"})
                                     <div>
-                                        @Html.LabelFor(model => model.UserName);
+                                        @Html.LabelFor(model => model.UserName)
                                         @Html.TextBoxFor(model => model.UserName, new {placeholder = "Enter Username"})
                                         @Html.ValidationMessageFor(model => model.UserName, "", new {@class = "text-danger"})
                                     </div>
                                     <div>
-                                        @Html.LabelFor(model => model.Password);
+                                        @Html.LabelFor(model => model.Password)
                                         @Html.PasswordFor(model => model.Password, new {placeholder = "Enter Password"})
                                         @Html.ValidationMessageFor(model => model.Password, "", new {@class = "text-danger"})
                                     </div>
