--- a/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
@@ -1,61 +1,75 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalNotesVM
 
-    <div style="margin: 20px;">
-        <table>
-            <thead>
-                <tr>
-                    <th style="width: 10%;">No.</th>
-                    <th style="width: 65%;">Description</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                        int i = 0;
-                        foreach (var item in Model.Notes)
-                        {
-                        i++;
-                        <tr>
-                            <td>@i</td>
-                            <td>
-                                <input type="hidden" id="NotesValues_@item.Id" name="NotesValues" value="@item.Nota">
-                                @item.Nota
-                            </td>
-                            <td>
-                                @item.CreatedAt
-                            </td>
-                            <td>
-                                <button type="button" class="NotesEdit btn btn-sm btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModaNotesAdd"><i class="fa fa-pencil" style="color: darkblue; font-size: 16px;">Edit</i></button>
-                            </td>
-                            <td>
-                                <button type="button" class="NotesDelete btn btn-sm btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteNoteModal">Delete</button>
-                            </td>
-                        </tr>
-                    }
-                }
-            </tbody>
-        </table>
-        <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#myModaNotesAdd">Add</button>
+<div style="margin: 20px;">
+    <table>
+        <thead>
+            <tr>
+                <th style="width: 10%;">No.</th>
+                <th style="width: 65%;">Description</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                int i = 0;
+                foreach (var item in Model.Notes)
+                {
+                    i++;
+                    <tr>
+                        <td>@i</td>
+                        <td>
+                            <input type="hidden" id="NotesValues_@item.Id" name="NotesValues" value="@item.Nota">
+                            @item.Nota
+                        </td>
+                        <td>
+                            @item.CreatedAt
+                        </td>
+                        @{
+                            if (Model.IsEditNotes)
+                            {
+                                <td>
+                                    <button type="button" class="NotesEdit btn btn-sm btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModaNotesAdd"><i class="fa fa-pencil" style="color: darkblue; font-size: 16px;">Edit</i></button>
+                                </td>
+                            }
+                            if (Model.IsDeleteNotes)
+                            {
+                                <td>
+                                    <button type="button" class="NotesDelete btn btn-sm btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteNoteModal">Delete</button>
+                                </td>
+                            }
+                        }
 
-        <div id="myModaNotesAdd" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Terminal Note</h4>
-                    </div>
-                    <div class="panel-body">
-                        @using (Html.BeginForm("SetNotes", "Terminals"))
-                        {
-                            @Html.AntiForgeryToken()
-                            <input type="hidden" id="id" name="id" value="@Model.Id">
-                            <input type="hidden" id="noteId" name="noteId" value="">
-                            
-                            <div class="form-group">
-                                <label for="comment">Note:</label>
-                                <textarea class="form-control" rows="5" id="notes" name="notes"></textarea>
-                            </div>
+                    </tr>
+                            }
+            }
+        </tbody>
+    </table>
+    @{
+        if (Model.IsAddNotes)
+        {
+            <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#myModaNotesAdd">Add</button>
+        }
+    }
+
+    <div id="myModaNotesAdd" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Terminal Note</h4>
+                </div>
+                <div class="panel-body">
+                    @using (Html.BeginForm("SetNotes", "Terminals"))
+                    {
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" id="id" name="id" value="@Model.Id">
+                        <input type="hidden" id="noteId" name="noteId" value="">
+
+                        <div class="form-group">
+                            <label for="comment">Note:</label>
+                            <textarea class="form-control" rows="5" id="notes" name="notes"></textarea>
+                        </div>
 
                             <div class="form-group">
                                 <div class="col-lg-10 col-lg-offset-2">
@@ -63,42 +77,40 @@
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </div>
                             </div>
-                        }
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="DeleteNoteModal" class="modal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Delete note</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>Are you sure you want to delete this note? </p>
-                    </div>
-                    <div class="modal-footer">
-                        @using (Html.BeginForm("DeleteNotes", "Terminals", FormMethod.Post))
-                        {
-                            @Html.AntiForgeryToken()
-                            @Html.Hidden("noteId")
-                            <input type="hidden" id="indexTerminalId" name="indexTerminalId" value="@Model.Id" />
-
-                            <div class="form-group">
-                                <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
-                                <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
-                            </div>
-                        }
-                    </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
 
+    <div id="DeleteNoteModal" class="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Delete note</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this note? </p>
+                </div>
+                <div class="modal-footer">
+                    @using (Html.BeginForm("DeleteNotes", "Terminals", FormMethod.Post))
+                        {
+                        @Html.AntiForgeryToken()
+                        @Html.Hidden("noteId")
+                        <input type="hidden" id="indexTerminalId" name="indexTerminalId" value="@Model.Id" />
 
-@Scripts.Render("~/Scripts/jquery-1.10.2.js")
+                        <div class="form-group">
+                            <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
+                            <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                        </div>
+                        }
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script>
 
