--- a/OctagonPlatform/Views/Terminals/Sections/Documents.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Documents.cshtml
@@ -2,7 +2,7 @@
 
 <div style="margin: 20px;">
     @using (Html.BeginForm("SetDocuments", "Terminals", FormMethod.Post,
-                                                  new { enctype = "multipart/form-data" }))
+                                                                          new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(m => m.Id)
@@ -30,27 +30,37 @@
                             <td>
                                 @item.Category
                             </td>
-                            <td>
-                                <button type="button" class="DocumentsDelete btn btn-sm btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteDocumentModal">Delete</button>
-                            </td>
-                        </tr>
-                    }
+                            @{
+                                if (Model.IsDeleteDocuments)
+                                {
+                                    <td>
+                                        <button type="button" class="DocumentsDelete btn btn-sm btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteDocumentModal">Delete</button>
+                                    </td>
+                                }
+                            }
 
-                    <tr>
-                        <td>Select File : </td>
-                        <td>
-                            @Html.TextBoxFor(model => model.Documents.FirstOrDefault().FileForm, new { type = "file" })
-                            @Html.ValidationMessage("CustomError")
-                        </td>
-                    </tr>
+                        </tr>
+                                }
+
+                                <tr>
+                                    <td>Select File : </td>
+                                    <td>
+                                        @Html.TextBoxFor(model => model.Documents.FirstOrDefault().FileForm, new { type = "file" })
+                                        @Html.ValidationMessage("CustomError")
+                                    </td>
+                                </tr>
 
                 }
             </tbody>
         </table>
 
-            <input type="submit" value="Add" class="btn btn-default" />
+                                if (Model.IsAddDocuments)
+                                {
+                                    <input type="submit" value="Add" class="btn btn-default" />
+                                    }
 
-                    }
+
+                                }
 
 
     <div id="myModaDocumentsAdd" class="modal fade" role="dialog">
@@ -72,16 +82,16 @@
                     <p class="alert alert-danger">
                         @ViewBag.Error
                     </p>
-                        <div class="form-group">
-                            <input type="text" id="notes" name="notes" value="">
-                        </div>
+                    <div class="form-group">
+                        <input type="text" id="notes" name="notes" value="">
+                    </div>
 
-                        <div class="form-group">
-                            <div class="col-lg-10 col-lg-offset-2">
-                                <button type="reset" class="btn btn-default">Cancel</button>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </div>
+                    <div class="form-group">
+                        <div class="col-lg-10 col-lg-offset-2">
+                            <button type="reset" class="btn btn-default">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
                         </div>
+                    </div>
                 }
             </div>
         </div>
@@ -106,10 +116,10 @@
                         @Html.HiddenFor(m => m.Documents)
                         <input type="hidden" id="documentId" name="documentId" value="" />
 
-                            <div class="form-group">
-                                <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
-                                <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
-                            </div>
+                        <div class="form-group">
+                            <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
+                            <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                        </div>
                     }
                 </div>
             </div>
