--- a/OctagonPlatform/Views/Terminals/Sections/Surcharge.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Surcharge.cshtml
@@ -7,8 +7,12 @@
         </p>
     }
 }
-<p>
-    @Ajax.ActionLink("ADD", "Create", "Surcharge", new { id = Model.Id },
+@{
+    if (Model.IsAddSurcharge)
+    {
+
+        <p>
+            @Ajax.ActionLink("ADD", "Create", "Surcharge", new { id = Model.Id },
                    new AjaxOptions
                    {
                        UpdateTargetId = "AddSurcharge",
@@ -22,34 +26,40 @@
                        data_toggle = "modal",
                        data_target = "#AddSurcharge"
                    })
-</p>
+        </p>
+    }
+}
 
-    <table id="surcharges" class="table table-striped table-hover table-bordered">
-        <thead class="thead-blue">
-            <tr>
-                <th>BankAccount</th>
-                <th>BankName</th>
-                <th>Split Amount</th>
-                <th>Split Percentage</th>
-                <th>Effective Date</th>
-                <th>Stop Date</th>
-            </tr>
-        </thead>
+<table id="surcharges" class="table table-striped table-hover table-bordered">
+    <thead class="thead-blue">
+        <tr>
+            <th>BankAccount</th>
+            <th>BankName</th>
+            <th>Split Amount</th>
+            <th>Split Percentage</th>
+            <th>Effective Date</th>
+            <th>Stop Date</th>
+        </tr>
+    </thead>
 
-        @if (Model.Surcharges != null)
+    @if (Model.Surcharges != null)
+    {
+        foreach (var item in Model.Surcharges)
         {
-            foreach (var item in Model.Surcharges)
-            {
-                <tbody>
-                    <tr>
-                        <td>@item.BankAccount.NickName</td>
-                        <td>@item.BankAccount.BankName</td>
-                        <td>@item.SplitAmount</td>
-                        <td>@item.SplitAmountPercent</td>
-                        <td>@item.StartDate.ToShortDateString()</td>
-                        <td>@item.StopDate.ToShortDateString()</td>
-                        <td>
-                            <i class="glyphicon glyphicon-edit"></i> @Html.ActionLink(
+            <tbody>
+                <tr>
+                    <td>@item.BankAccount.NickName</td>
+                    <td>@item.BankAccount.BankName</td>
+                    <td>@item.SplitAmount</td>
+                    <td>@item.SplitAmountPercent</td>
+                    <td>@item.StartDate.ToShortDateString()</td>
+                    <td>@item.StopDate.ToShortDateString()</td>
+                    <td>
+                        @{
+                            if (Model.IsEditSurcharge)
+                            {
+
+                                <i class="glyphicon glyphicon-edit"></i> @Html.ActionLink(
                                                                 linkText: "Edit",
                                                                 actionName: "Edit",
                                                                 controllerName: "Surcharge",
@@ -59,23 +69,30 @@
                                                                 },
                                                                 htmlAttributes: null
                                                                 )
-                        </td>
-                        <td>
-                            <button type="button" class="btn link"
-                                    data-toggle="modal" id="DeleteSurchage" data-id="@item.Id" data-target="#DeleteSurcharge">
-                                Delete
-                            </button>
-                        </td>
+                            }
+                        }
+                    </td>
+                    <td>
+                        @{
+                            if (Model.IsDeleteSurcharge)
+                            {
+                                <button type="button" class="btn link"
+                                        data-toggle="modal" id="DeleteSurchage" data-id="@item.Id" data-target="#DeleteSurcharge">
+                                    Delete
+                                </button>
+                            }
+                        }
+                    </td>
 
-                    </tr>
+                </tr>
 
 
-                </tbody>
+            </tbody>
 
-            }
-        }
+                                }
+                            }
 
-    </table>
+</table>
 
 <div id="DeleteSurcharge" class="modal fade" role="dialog">
 
